--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/lesson1/home/home1/index.html">home 1</a>
+    <a href="home/home1/index.html">home 1</a>
 </body>
 </html>
