--- a/home/1/DIARY.html
+++ b/home/1/DIARY.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Дневник партизана</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Дневник партизана</title>
 </head>
 <body>
-<h1 align="center"> Дневник партизана </h1>
+    <h1 align="center"> Дневник партизана </h1>
 <ol>
 <Li><b>Вторник.</b> Выбили <a href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B5%D0%BC%D1%86%D1%8B" target="_blank" title="Подробнее о немцах">немцев</a> с опушки. Засели в доме лесника.</Li>
 <li><b>Среда.</b> Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
@@ -17,5 +17,4 @@
 
 <p>&copy бородатый <a href="https://anekdotovstreet.com/nacionalnosti/nemcy/" title="Анекдотные анекдоты" target="_blank">анекдот</a></p>
 </body>
-
 </html>
