--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="home/home1/index.html">home 1</a>
+    <p><b>Main</b></p>
+    <a href="home/1/DIARY.html">DIARY</a> <br>
+    <a href="home/1/VIZBOR.html">VIZBOR</a>
+
+    <p><b>Add</b></p>
 </body>
 </html>
