--- a/home/1/VIZBOR.html
+++ b/home/1/VIZBOR.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Юрий Визбор</h1>
     <h2>Вечно студент</h2>
-    <p> <a href="vechno_student.html#nachalo" target="_blank" > читать сначала </a></p>
-    <p> <a href="vechno_student.html#konec" target="_blank"> чиатать с последнего абзаца </a> </p>
-    hfsgkgsvhdkjadg
+    <p> <a href="vechno-student.html#nachalo" target="_blank" > читать сначала </a></p>
+    <p> <a href="vechno-student.html#konec" target="_blank"> чиатать с последнего абзаца </a> </p>
+    
 </body>
 </html>
