--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="#FFFF00">
     <p><b>Main</b></p>
     <a href="home/1/DIARY.html">DIARY</a> <br>
     <a href="home/1/VIZBOR.html">VIZBOR</a>
