--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <a href="home/1/VIZBOR.html">VIZBOR</a>
 
     <p><b>Add</b></p>
+    <a href="home/1/oldtag.html">OLDTAG</a>
+
 </body>
 </html>
