--- a/home/1/oldtag.html
+++ b/home/1/oldtag.html
@@ -20,5 +20,14 @@
       <img src="img/1.png" title="Синтаксис"> </p>
       <p>Список выше с определениями тегов составлен с использованием именно этих тегов, чтобы показать, как они работают.</p>
       <p>2. Тег <b>pre</b> - сокращение от «preformatted text», который обозначает «предварительно отформатированный текст». Чаще всего этот тег используется для отображения примеров кода, реже применяется для отображения картинок ASCII Art. Браузер сохраняет и отображает все пробелы и переносы, которые есть внутри тега &#60pre&#62;</p>
+      <pre><p>
+          Пример: 
+
+                   этот     текст     отображается    
+                    со                  всеми       
+                            пробелами
+
+        между                           словами
+      </p></pre>
 </body>
 </html>
