--- a/home/2/CHILDBOOK.html
+++ b/home/2/CHILDBOOK.html
@@ -24,7 +24,7 @@
     <img src="img/palitra.png" alt="palitra" title="palitra">
     <p>Нарисую я в альбоме<br>
     <i>Голубое</i> море,<br>
-    <i>Белый</i>парус над волною<br>
-    Бьется на просторе</p>
+    <i>Белый</i> парус над волною<br>
+    Бьется на просторе.</p>
 </body>
 </html>
