--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <body bgcolor="#FFFF00">
     <p><b>Main</b></p>
     <a href="home/1/DIARY.html">DIARY</a> <br>
-    <a href="home/1/VIZBOR.html">VIZBOR</a>
+    <a href="home/1/VIZBOR.html">VIZBOR</a><br>
+    <a href="home/2/CHILDBOOK.html">BOOK</a><br>
 
+
+
+    
     <p><b>Add</b></p>
     <a href="home/1/oldtag.html">OLDTAG</a>
 
