--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework</title>
 </head>
 <body bgcolor="#FFFF00">
     <p><b>Main</b></p>
-    <a href="home/1/DIARY.html">DIARY</a> <br>
-    <a href="home/1/VIZBOR.html">VIZBOR</a><br>
-    <a href="home/2/CHILDBOOK.html">BOOK</a><br>
+    <a href="home/1/DIARY.html" target="_blank">DIARY</a> <br>
+    <a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a><br>
+    <a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a><br>
 
 
 
     
     <p><b>Add</b></p>
-    <a href="home/1/oldtag.html">OLDTAG</a>
+    <a href="home/1/oldtag.html" target="_blank">OLDTAG</a>
 
 </body>
 </html>
