--- a/home/2/webp.html
+++ b/home/2/webp.html
@@ -15,11 +15,22 @@
     Формат использует новый алгоритм сжатия, в котором искажения отличаются от искажений других форматов.<br>
     Ухудшается детализация и структура, в то время как края остаются чёткими.</p><br>
     
-    <p>Особенности WebP:</p>
+    <p><b>Особенности WebP:</b></p>
    <ol style="list-style-type: circle;" >
     <li>сжимает изображения без потерь лучше, чем PNG (на 26% по данным Google);</li>
     <li> сжимает изображения с потерями лучше, чем JPEG (на 25–34% по данным Google);</li>
     <li>поддерживает прозрачность (альфа-канал).</li>
     </ol>
+    <p><b>Недостатки WebP:</b></p>
+    <ol style="list-style-type: decimal;" >
+        <li>Ввиду относительной новизны формата, не все браузеры умеют с ним работать. <br>
+            На сегодняшний день WebP поддерживается только Chrome, Opera и Firefox.</li>
+        <li>Проблема не только в браузерах, но и в других программных решениях.<br>
+            К примеру, в WordPress нет нативной поддержки WebP, а это, между прочим, популярнейшая CMS в мире.<br>
+             И таких ресурсов все еще много.</li>
+        <li>WebP-файлы зачастую нечем открывать на компьютере.<br>
+            Поэтому некоторые пользователи Windows и Linux негодуют, когда пытаются скачать картинку через Google Chrome,<br>
+            а получают файл с невнятным расширением, который нельзя открыть.</li>
+        </ol>
 </body>
 </html>
