--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     
     <p><b>Add</b></p>
-    <a href="home/1/oldtag.html" target="_blank">OLDTAG</a>
+    <a href="home/1/oldtag.html" target="_blank">OLDTAG</a><br>
+    <a href="home/2/webp.html" target="_blank">WEbP</a>
+
 
 </body>
 </html>
