--- a/home/1/oldtag.html
+++ b/home/1/oldtag.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>Сегодня мы изучим несколько новых (для нас) тегов</h3>
+    <hr />
      <p>1. Для начала рассмотрим группу тегов <b>dl, dt, dd</b>, которые используются для списков описаний:</p>
      <dl><dt><b>&#60dl&#62</b></dt>
         <dd>сокращение от «description list» обозначает сам список описаний</dd>
@@ -19,7 +20,8 @@
       <p>Синтаксис:<br>
       <img src="img/1.png" title="Синтаксис"> </p>
       <p>Список выше с определениями тегов составлен с использованием именно этих тегов, чтобы показать, как они работают.</p>
-      <p>2. Тег <b>pre</b> - сокращение от «preformatted text», который обозначает «предварительно отформатированный текст». Чаще всего этот тег используется для отображения примеров кода, реже применяется для отображения картинок ASCII Art. Браузер сохраняет и отображает все пробелы и переносы, которые есть внутри тега &#60pre&#62;</p>
+      <hr />
+      <p>2. Тег <b>pre</b> - сокращение от «preformatted text», который обозначает «предварительно отформатированный текст». Такой текст отображается обычно моноширинным шрифтом и со всеми пробелами между словами. По умолчанию, любое количество пробелов идущих в коде подряд, на веб-странице показывается как один. Тег  &#60pre&#62 позволяет обойти эту особенность и отображать текст как требуется разработчику.</p>
       <pre><p>
           Пример: 
 
@@ -29,5 +31,17 @@
 
         между                           словами
       </p></pre>
+      <hr />
+      <p>3. Тег <b>сode</b> предназначен для отображения одной или нескольких строк текста, который представляет собой программный код. Сюда относятся имена переменных, ключевые слова, тексты функции и т.д. Браузеры обычно отображают содержимое контейнера &#60code&#62 как моноширинный текст уменьшенного размера.<br>
+        В отличие от тега &#60pre&#62 дополнительные пробелы внутри контейнера &#60code&#62 не учитываются, так же, как и переносы текста. Поэтому используйте тег &#60br&#62 или &#60p&#62 для создания переносов.</p>
+        <p><b>Пример</b></p>
+        <p><code> 
+            function checkParent (src, dest) {<Br>
+             while (src != null) {<Br>
+               if (src.tagName == dest) return src<Br>
+                src = src.parentElement<Br>
+             }<Br>
+             return null<Br>
+            }</code></p>
 </body>
 </html>
