--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <p><b>Add</b></p>
     <a href="home/1/oldtag.html" target="_blank">OLDTAG</a><br>
-    <a href="home/2/webp.html" target="_blank">WEbP</a>
+    <a href="home/2/webp.html" target="_blank">WebP</a>
 
 
 </body>
