--- a/home/1/oldtag.html
+++ b/home/1/oldtag.html
@@ -34,7 +34,7 @@
       <hr />
       <p>3. Тег <b>сode</b> предназначен для отображения одной или нескольких строк текста, который представляет собой программный код. Сюда относятся имена переменных, ключевые слова, тексты функции и т.д. Браузеры обычно отображают содержимое контейнера &#60code&#62 как моноширинный текст уменьшенного размера.<br>
         В отличие от тега &#60pre&#62 дополнительные пробелы внутри контейнера &#60code&#62 не учитываются, так же, как и переносы текста. Поэтому используйте тег &#60br&#62 или &#60p&#62 для создания переносов.</p>
-        <p><b>Пример</b></p>
+        <p><b>Пример:</b></p>
         <p><code> 
             function checkParent (src, dest) {<Br>
              while (src != null) {<Br>
@@ -43,5 +43,10 @@
              }<Br>
              return null<Br>
             }</code></p>
+            <hr />
+        <p>4. Тег <b>tt</b> (от англ. "Teletype Text" ‒ «текст телетайп») отображает вложенный в него текст '<tt>моноширинным шрифтом</tt>' (эффект пишущей машинки или телетайпа; семейство шрифтов «monospace»). Этот тег относится к группе тегов физического форматирования.<br>
+            Тег &#60tt&#62 не поддерживается в HTML5.</p>
+            <hr />
+        <p>5. Тег <b>kbd</b> ( Keyboard Input Element) определяет вводимые пользователем нажатия клавиш или текст, набираемый на клавиатуре (по умолчанию представлен моноширинным шрифтом).</p> 
 </body>
 </html>
