--- a/home/2/CHILDBOOK.html
+++ b/home/2/CHILDBOOK.html
@@ -7,15 +7,15 @@
     <title>CHILDBOOK</title>
 </head>
 <body>
-    <img src="img/car.gif" alt="car" title="car">
-    <!--Т.к. картинка имеет не очень много цветов, для нее подходит формат GIF. Качество передается хорошо и при этом имеет небольшой вес-->
+    <img src="img/car.png" alt="car" title="car">
+    <!--Т.к. картинка имеет много цветов и предполагается прозрачность,для нее подходит формат PNG.-->
     <p>За рулем сижу довольный - <br>
     Ездить просто и легко!<br>
     Только руль чуть-чуть огромный<br>
     И педали далеко.</p>
 
     <img src="img/train.jpeg" width="210" alt="Паровозик" title="Паровозик">
-    <!--Для полноцветной картинки подходят варианты PNG и JPEG, т.к. нам прозрачность не нужна, и при этом размере качество одного формата от другого почти не отличается, поэтому мы выбираем JPEG, т.к. в этом формате картинка весит почти в 6 раз меньше-->
+    <!--Для полноцветной картинки подходят варианты PNG и JPEG,мы выбираем JPEG, т.к. в этом формате картинка весит почти в 6 раз меньше-->
     <p>Мне купили <b>паровозик,</b><br>
     сразу два вагона возит.<br>
     Я включу его, и он<br>
@@ -23,8 +23,8 @@
     Вот бы мне в нем прокатиться,<br>
     Только жаль - не поместиться.</p>
     
-    <img src="img/palitra.png" alt="palitra" title="palitra"> 
-    <!--Использован формат PNG т.к у нас предполагается, что эта картинка должна иметь прозрачность-->
+    <img src="img/palitra2.gif" alt="palitra" title="palitra"> 
+    <!--Использован формат GIF т.к мало цветов в картинке и предполагается прозрачность-->
     <p>Нарисую я в альбоме<br>
     <i>Голубое</i> море,<br>
     <i>Белый</i> парус над волною<br>
