--- a/home/2/webp.html
+++ b/home/2/webp.html
@@ -32,5 +32,7 @@
             Поэтому некоторые пользователи Windows и Linux негодуют, когда пытаются скачать картинку через Google Chrome,<br>
             а получают файл с невнятным расширением, который нельзя открыть.</li>
         </ol>
+    <p><b>Сравним 2 картинки в формате JPEG и WebP</b></p>
+    <img src="img/webp-1.jpg" alt="JPEG" title="JPEG" width="500" >  <img src="img/webp-1.webp" alt="WebP" title="WebP" width="500">
 </body>
 </html>
