--- a/home/2/webp.html
+++ b/home/2/webp.html
@@ -32,7 +32,14 @@
             Поэтому некоторые пользователи Windows и Linux негодуют, когда пытаются скачать картинку через Google Chrome,<br>
             а получают файл с невнятным расширением, который нельзя открыть.</li>
         </ol>
-    <p><b>Сравним 2 картинки в формате JPEG и WebP</b></p>
+    <p><b>Сравним 2 изображения в формате JPEG и WebP</b></p>
     <img src="img/webp-1.jpg" alt="JPEG" title="JPEG" width="500" >  <img src="img/webp-1.webp" alt="WebP" title="WebP" width="500">
+    <br>
+    <p>При увеличении можем увидеть, что при одинаковом весе изображений качество в формате WebP значительно выше </p>
+    <p><b>Сравним 2 изображения в формате PNG и WebP</b></p>
+    <img src="img/png-2.png" alt="PNG" title="PNG" width="500" >  <img src="img/png-2.webp" alt="WebP" title="WebP" width="500">
+    <br>
+    <p>Та же самая ситуация, что при одинаковом весе изображений качество в формате WebP выше </p>
+
 </body>
 </html>
