--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework</title>
 </head>
-<body bgcolor="#FFFF00">
+<body bgcolor="#999999">
     <p><b>Main</b></p>
     <a href="home/1/DIARY.html" target="_blank">DIARY</a> <br>
     <a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a><br>
