--- a/home/1/DIARY.html
+++ b/home/1/DIARY.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1 align="center"> Дневник партизана </h1>
+    <img src="img/RedArmy.gif">
 <ol>
-<Li><b>Вторник.</b> Выбили <a href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B5%D0%BC%D1%86%D1%8B" target="_blank" title="Подробнее о немцах">немцев</a> с опушки. Засели в доме лесника.</Li>
+<Li><b>Вторник.</b> Выбили <a href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B5%D0%BC%D1%86%D1%8B" target="_blank" title="Подробнее о немцах">немцев</a> с опушки. Засели в <img src="data:image/gif;base64,R0lGODlhDgAQAJEAAP///+bm5mZmZgAAACwAAAAADgAQAAACKYSPqct9IhyAsMEQqro8ot49QkaFYDlqKPpRWNlepGaULxWPs1e7u1EAADs="> доме лесника.</Li>
 <li><b>Среда.</b> Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
 <li><b>Четверг.</b> Под покровом ночи смогли снова засесть в доме лесника. Курим «Беломор».</li>
 <li><b>Пятница.</b> Вернулся лесник и всех выгнал.</li>
