--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework</title>
 </head>
-<body bgcolor="#999999">
+<body style="background-color: dimgray;">
     <p><b>Main</b></p>
     <a href="home/1/DIARY.html" target="_blank">DIARY</a> <br>
     <a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a><br>
     <a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a><br>
 
-
-
-    
+        <hr style="border: 1px solid black";>
     <p><b>Add</b></p>
-    <a href="home/1/oldtag.html" target="_blank">OLDTAG</a><br>
+    <a href="home/1/oldtag.html" target="_blank">OLDTAG</a> not ready<br>
     <a href="home/2/webp.html" target="_blank">WebP</a>
 
-
+    <hr style="border: 1px solid black";>
+    <p><b>Lessons</b></p>
+    <a href="lessons/Color/color.html" target="blank">Color</a>
 </body>
 </html>
