--- a/lessons/Color/color.html
+++ b/lessons/Color/color.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Simon and Garfunkel</h1>
-    <p style="color: blue;" >В 1964 году на лейбле Columbia был выпущен их дебютный альбом «Wednesday Morning 3AM». Пластинка прошла практически незамеченной, после чего пути музыкантов пошли врозь.</p>
-    <p style="color: blue;">В это время на долю музыкантов выпал неожиданный успех. Летом 1965 года импресарио Тим Уилсон, известный продюсированием ранних альбомов Дилана, осовременил звучание песни «The Sounds of Silence», написанной Саймоном под впечатлением от убийства президента Кеннеди, наложив на неё электрические гитары и ударные. <span style="text-decoration: underline;">Без ведома авторов</span> новая версия была выпущена синглом и достигла первой строчки в национальных чартах. Эта запись была признана музыкальными критиками <span style="color: red;">квинтэссенцией</span> входившего тогда в моду фолк-рока.</p>
-    <p style="color: blue;">Хотя Саймон и Гарфанкел были шокированы тем, что их самый успешный сингл был аранжирован и выпущен без их участия, его триумфальное восхождение в чартах заставило их вновь объединить усилия и развернуть своё творчество в сторону приглушённого акустического фолк-рока. За «The Sounds of Silence» последовали такие жемчужины фолк-рока, как «A Hazy Shade of Winter» и «Homeward Bound» — возможно, самые рафинированные и стильные образчики этого направления рок-музыки.</p>
+    <p style="color: blue; font-style: italic;" >В 1964 году на лейбле Columbia был выпущен их дебютный альбом «Wednesday Morning 3AM». Пластинка прошла практически незамеченной, после чего пути музыкантов пошли врозь.</p>
+    <p style="color: blue; font-style: italic;">В это время на долю музыкантов выпал неожиданный успех. Летом 1965 года импресарио Тим Уилсон, известный продюсированием ранних альбомов Дилана, осовременил звучание песни «The Sounds of Silence», написанной Саймоном под впечатлением от убийства президента Кеннеди, наложив на неё электрические гитары и ударные. <span style="text-decoration: underline;">Без ведома авторов</span> новая версия была выпущена синглом и достигла первой строчки в национальных чартах. Эта запись была признана музыкальными критиками <span style="color: red;">квинтэссенцией</span> входившего тогда в моду фолк-рока.</p>
+    <p style="color: blue; font-style: italic;">Хотя Саймон и Гарфанкел были шокированы тем, что их самый успешный сингл был аранжирован и выпущен без их участия, его триумфальное восхождение в чартах заставило их вновь объединить усилия и развернуть своё творчество в сторону приглушённого акустического фолк-рока. За «The Sounds of Silence» последовали такие жемчужины фолк-рока, как «A Hazy Shade of Winter» и «Homeward Bound» — возможно, самые рафинированные и стильные образчики этого направления рок-музыки.</p>
     <h2>Студийные альбомы</h2>
 
-    <ol style="list-style-type: square; color: green; ">
+    <ol style="list-style-type: square; color: green; font-weight: bold">
     <li>Wednesday Morning, 3 A.M. (1964)</li>
     <li>Sounds of Silence (1966)</li>
     <li>Parsley, Sage, Rosemary and Thyme (1966)</li>
@@ -21,6 +21,6 @@
     <li>Bookends (1968)</li>
     <li>Bridge Over Troubled Water (1970)</li>
 </ol>
-    <p></p>
+    <p style="text-decoration: overline;">Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части неровными и оставляли ощущение недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в слащавости и стерильности.</p>
 </body>
 </html>
