--- a/home/2/webp.html
+++ b/home/2/webp.html
@@ -35,11 +35,10 @@
     <p><b>Сравним 2 изображения в формате JPEG и WebP</b></p>
     <img src="img/webp-1.jpg" alt="JPEG" title="JPEG" width="500" >  <img src="img/webp-1.webp" alt="WebP" title="WebP" width="500">
     <br>
-    <p>При увеличении можем увидеть, что при одинаковом весе изображений качество в формате WebP значительно выше </p>
     <p><b>Сравним 2 изображения в формате PNG и WebP</b></p>
     <img src="img/png-2.png" alt="PNG" title="PNG" width="500" >  <img src="img/png-2.webp" alt="WebP" title="WebP" width="500">
     <br>
-    <p>Та же самая ситуация, что при одинаковом весе изображений качество в формате WebP выше </p>
+    <p>Можно сделать вывод, что в двух случаях формат WebP выигрывает, т.к. при одинаковом качестве вес изображения в webP в несколько раз меньше </p>
 
 </body>
 </html>
