--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <hr style="border: 1px solid black";>
     <p><b>Lessons</b></p>
     <a href="lessons/Color/color.html" target="blank">Color</a>
+    <a href="lessons/font/font1.html" target="blank">Font 1</a>
+    <a href="lessons/font/font2.html" target="blank">Font 2</a>
 </body>
 </html>
