--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="home/1/DIARY.html" target="_blank">DIARY</a> <br>
     <a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a><br>
     <a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a><br>
+    <a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a><br>
 
         <hr style="border: 1px solid black";>
     <p><b>Add</b></p>
