--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <p><b>Add</b></p>
     <a href="home/1/oldtag.html" target="_blank">OLDTAG</a> not ready<br>
     <a href="home/2/webp.html" target="_blank">WebP</a>
-
+    <a href="home/2/skob.html" target="_blank">Skob</a>
     <hr style="border: 1px solid black";>
     <p><b>Lessons</b></p>
-    <a href="lessons/Color/color.html" target="blank">Color</a>
-    <a href="lessons/font/font1.html" target="blank">Font 1</a>
-    <a href="lessons/font/font2.html" target="blank">Font 2</a>
+    <a href="lessons/Color/color.html" target="blank">Color</a><br>
+    <a href="lessons/font/font1.html" target="blank">Font 1</a><br>
+    <a href="lessons/font/font2.html" target="blank">Font 2</a><br>
 </body>
 </html>
