--- a/home/3/FONT_GWF.html
+++ b/home/3/FONT_GWF.html
@@ -21,7 +21,7 @@ div {font-family: 'Oswald', sans-serif;
 <body>
 
       <h2>Новости 17.03.2022</h2>
-<p style="font-size: 25px;">Этой ночью снимут все ограничения на перемещение между Беларусью и РФ</p>
+<p style="font-size: 25px;"><font color='#CANDY'>Этой ночью снимут все ограничения на перемещение между Беларусью и РФ</font></p>
     
 <p>С полуночи 18 марта снимаются все ограничения на перемещение граждан в рамках Союзного государства России и Беларуси, пишет ТАСС со ссылкой на заявление премьер-министра РФ Михаила Мишустина.<br>
     Он добавил, что этот вопрос заранее согласовали с Владимиром Путиным, сообщает «РИА Новости». Как заявил 14 марта глава Совмина Беларуси Роман Головченко, ковидные ограничения, введенные Москвой, это «анахронизм», который российская сторона пообещала максимально быстро снять.</p>
@@ -29,7 +29,7 @@ div {font-family: 'Oswald', sans-serif;
 <p>Позже ГПК Беларуси дал комментарий об отмене ограничений на передвижение граждан в рамках Союзного государства.</p>
 <p> <span style="font-style: italic;">«В связи с участившимися обращениями в Госпогранкомитет о снятии с 18 марта российской стороной всех ограничений на перемещение граждан в рамках Союзного государства России и Беларуси информируем, что органами пограничной службы Республики Беларусь пограничный контроль на белорусско-российской границе не осуществляется. Для получения информации по всем вопросам пересечения границы на данном направлении рекомендуем обращаться в компетентные органы Российской Федерации»,</span> — отметили в комитете.</p>
 
-<div ><H2>Отдали только $3000, остальное перевели на счет</H2>
+<div ><H2><font color='#BruceWillis'> Отдали только $3000, остальное перевели на счет</font></H2>
     Утром 15 марта в редакцию позвонил читатель Андрей и сообщил, что не может снять свой валютный вклад в «Паритетбанке» — по словам мужчины, в банке отказались выдавать ему наличные в долларах. Причем срок вклада уже закончился, мужчина заранее позвонил в банк и сообщил, что придет за деньгами.</br>
 <span style="font-weight: 600;">— У меня на вкладе в «Паритетбанке» была достаточно большая сумма в долларах. Срок вклада закончился, за неделю до этого я позвонил в банк и предупредил, что приду снять деньги с вклада. Я вчера [14 марта] пришел в банк, но «Паритетбанк» отказывается вернуть вклад в долларах наличными, — <span style="font-weight: 300;">эмоционально рассказал Андрей.</span> — Мне сказали, что со вчерашнего дня не выдают наличными вклады в иностранной валюте больше $3000. Мне выдали $3000, а остальное перечислили на расчетный счет, с которого я не могу снять деньги, потому что есть ограничение на снятие. Мне предложили забрать вклад наличными белорусскими рублями, но что мне делать с чемоданом рублей? </span><br>
 В банке Андрею выдали документ на двух страницах, он его отсканировал и выслал в редакцию. Здесь сообщается, каким образом вкладчики могут вернуть свои вклады в иностранной валюте.</div></body>
