--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body style="background-color: dimgray;">
     <p><b>Main</b></p>
-    <a href="home/1/DIARY.html" target="_blank">DIARY</a> <br>
-    <a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a><br>
-    <a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a><br>
-    <a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a><br>
+    <ul><li><a href="home/1/DIARY.html" target="_blank">DIARY</a></li>
+    <li><a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a></li>
+    <li><a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a></li>
+    <li><a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a></li>
+    <li></li></ul>
+     
 
         <hr style="border: 1px solid black";>
     <p><b>Add</b></p>
     <a href="home/1/oldtag.html" target="_blank">OLDTAG</a> not ready<br>
-    <a href="home/2/webp.html" target="_blank">WebP</a>
-    <a href="home/2/skob.html" target="_blank">Skob</a>
+    <a href="home/2/webp.html" target="_blank">WebP</a><br>
+    <a href="home/2/skob.html" target="_blank">Skob</a><br>
     <hr style="border: 1px solid black";>
     <p><b>Lessons</b></p>
     <a href="lessons/Color/color.html" target="blank">Color</a><br>
