--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="home/1/oldtag.html" target="_blank">OLDTAG</a> not ready<br>
     <a href="home/2/webp.html" target="_blank">WebP</a><br>
     <a href="home/2/skob.html" target="_blank">Skob</a><br>
+    <a href="home/3/font.html" target="_blank">Font</a><br>
     <hr style="border: 1px solid black";>
     <p><b>Lessons</b></p>
     <a href="lessons/Color/color.html" target="blank">Color</a><br>
