--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
     <a href="lessons/Color/color.html" target="blank">Color</a><br>
     <a href="lessons/font/font1.html" target="blank">Font 1</a><br>
     <a href="lessons/font/font2.html" target="blank">Font 2</a><br>
+    <a href="lessons/border/Border1.html" target="blank">Border 1</a><br>
+    <a href="lessons/border/border.html" target="blank">Border </a><br>
 </body>
 </html>
