--- a/home/1/vechno-student.html
+++ b/home/1/vechno-student.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 <body>
     <h2> <a name="nachalo">Юрий Визбор. Вечно студенческие </a> </h2>
 
-    </p>Когда  пишут  или  говорят  о  студенческих  песнях,  многие <br>
+    <p>Когда  пишут  или  говорят  о  студенческих  песнях,  многие <br>
         впадают в ошибку - путают  студенческие  песни  с  туристскими.<br>
         Давайте на этот раз не совершим ее. Студенческая песня сама  по<br>
         себе явление довольно значительное, и сужать ее  до  туристской<br>
@@ -56,7 +56,7 @@
         разработал его в своей "Юмореске", а Э. Хумпердинк развернул  в<br>
         целую оперу из жизни немецких студентов.</p>
         
-        <p id="konec"> "Гаудеамус"  </a> был   очень   популярен   в   среде   русского<br>
+        <p id="konec"> "Гаудеамус" был   очень   популярен   в   среде   русского<br>
         студенчества.  Трудно,  пожалуй,  найти  старого  инженера  или<br>
         врача, которые не  знали  бы  этого  гимна.  И  в  наши  дни  в<br>
         Ленинграде и в Тарту, во многих институтах  зал  встает,  когда<br>
