--- a/index.html
+++ b/index.html
@@ -5,28 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework</title>
+    <style>
+        div{ margin-left: 20px;
+
+        }
+    </style>
 </head>
-<body style="background-color: dimgray;">
-    <p><b>Main</b></p>
-    <ul><li><a href="home/1/DIARY.html" target="_blank">DIARY</a></li>
+<body style="background-color: rgb(216, 206, 206);">
+   <h4 style="margin-inline-start: 20px;">Main</h4>
+    <ul>
+    <li><a href="home/1/DIARY.html" target="_blank">DIARY</a></li>
     <li><a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a></li>
     <li><a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a></li>
     <li><a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a></li>
-    <li></li></ul>
-     
-
+    <li></li>
+</ul>
+    
         <hr style="border: 1px solid black";>
-    <p><b>Add</b></p>
-    <a href="home/1/oldtag.html" target="_blank">OLDTAG</a> not ready<br>
+    <div>    <h4>Add</h4>
+    <a href="home/1/valid.html" target="_blank">Valid</a><br>
+    <a href="home/1/oldtag.html" target="_blank">OLDTAG</a><br>
     <a href="home/2/webp.html" target="_blank">WebP</a><br>
     <a href="home/2/skob.html" target="_blank">Skob</a><br>
     <a href="home/3/font.html" target="_blank">Font</a><br>
+    <a href="home/3/safe.html" target="_blank">Safe</a><br>
+</div>
     <hr style="border: 1px solid black";>
-    <p><b>Lessons</b></p>
+
+    <div><h4>Lessons</h4>
     <a href="lessons/Color/color.html" target="blank">Color</a><br>
     <a href="lessons/font/font1.html" target="blank">Font 1</a><br>
     <a href="lessons/font/font2.html" target="blank">Font 2</a><br>
     <a href="lessons/border/Border1.html" target="blank">Border 1</a><br>
     <a href="lessons/border/border.html" target="blank">Border </a><br>
+</div>
 </body>
 </html>
