--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     </style>
 </head>
 <body style="background-color: rgb(216, 206, 206);">
-   <h4 style="margin-inline-start: 20px;">Main</h4>
-    <ul>
-    <li><a href="home/1/DIARY.html" target="_blank">DIARY</a></li>
-    <li><a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a></li>
-    <li><a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a></li>
-    <li><a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a></li>
-    <li></li>
-</ul>
+   <div><h4>Main</h4>
+   
+    <a href="home/1/DIARY.html" target="_blank">DIARY</a><br>
+    <a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a><br>
+    <a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a><br>
+    <a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a><br>
+    </div>
     
         <hr style="border: 1px solid black";>
     <div>    <h4>Add</h4>
     <a href="home/1/valid.html" target="_blank">Valid</a><br>
-    <a href="home/1/oldtag.html" target="_blank">OLDTAG</a><br>
+    <a href="home/1/oldtag.html" target="_blank">Oldtag</a><br>
     <a href="home/2/webp.html" target="_blank">WebP</a><br>
     <a href="home/2/skob.html" target="_blank">Skob</a><br>
     <a href="home/3/font.html" target="_blank">Font</a><br>
     <a href="home/3/safe.html" target="_blank">Safe</a><br>
+    <a href="home/3/task3.html" target="_blank">Task*</a><br>
 </div>
     <hr style="border: 1px solid black";>
 
