--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <a href="lessons/font/font2.html" target="blank">Font 2</a><br>
     <a href="lessons/border/Border1.html" target="blank">Border 1</a><br>
     <a href="lessons/border/border.html" target="blank">Border </a><br>
+    <a href="lessons/bg-image/index.html" target="blank">Background</a><br>
 </div>
 </body>
 </html>
