--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework</title>
     <style>
-        div{ margin-left: 20px;
+        div{ margin-left: 20px;}
+        hr{border: 1px dashed darkslategrey; width: 250px; margin: 10px 15px;}
+        h4{color: darkslategrey;}
 
-        }
     </style>
 </head>
-<body style="background-color: rgb(216, 206, 206);">
-   <div><h4>Main</h4>
-   
+<body style="background-color: rgb(243, 220, 209);">
+    <h2 style="color: darkslategrey; margin: 20px;">Homework</h2>  
+    <div>
+    <h4>Main</h4>
     <a href="home/1/DIARY.html" target="_blank">DIARY</a><br>
     <a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a><br>
     <a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a><br>
     <a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a><br>
     <a href="home/4/Div_Frame.html" target="_blank">FRAME</a><br>
     </div>
-    
-        <hr style="border: 1px solid black";>
+    <hr>
     <div>    <h4>Add</h4>
     <a href="home/1/valid.html" target="_blank">Valid</a><br>
     <a href="home/1/oldtag.html" target="_blank">Oldtag</a><br>
@@ -30,9 +31,8 @@
     <a href="home/3/font.html" target="_blank">Font</a><br>
     <a href="home/3/safe.html" target="_blank">Safe</a><br>
     <a href="home/3/task3.html" target="_blank">Task*</a><br>
-</div>
-    <hr style="border: 1px solid black";>
-
+    </div>
+    <hr>
     <div><h4>Lessons</h4>
     <a href="lessons/Color/color.html" target="blank">Color</a><br>
     <a href="lessons/font/font1.html" target="blank">Font 1</a><br>
@@ -40,6 +40,6 @@
     <a href="lessons/border/Border1.html" target="blank">Border 1</a><br>
     <a href="lessons/border/border.html" target="blank">Border </a><br>
     <a href="lessons/bg-image/index.html" target="blank">Background</a><br>
-</div>
+    </div>
 </body>
 </html>
