--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <a href="home/3/font.html" target="_blank">Font</a><br>
     <a href="home/3/safe.html" target="_blank">Safe</a><br>
     <a href="home/3/task3.html" target="_blank">Task*</a><br>
+    <a href="home/4/1tag.html" target="_blank">1tag</a><br>
     </div>
     <hr>
     <div><h4>Lessons</h4>
