--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <a href="lessons/border/Border1.html" target="blank">Border 1</a><br>
     <a href="lessons/border/border.html" target="blank">Border </a><br>
     <a href="lessons/bg-image/index.html" target="blank">Background</a><br>
+    <a href="lessons/lesson7/sprite.html" target="blank">Sprite1</a><br>
+    <a href="lessons/lesson7/sprite2.html" target="blank">Sprite2</a><br>
+    <a href="lessons/lesson7/table.html" target="blank">Table</a><br>
+
     </div>
 </body>
 </html>
