--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <a href="lessons/lesson7/sprite.html" target="blank">Sprite1</a><br>
     <a href="lessons/lesson7/sprite2.html" target="blank">Sprite2</a><br>
     <a href="lessons/lesson7/table.html" target="blank">Table</a><br>
+    <a href="lessons/Float/index.html" target="blank">Float1</a><br>
+    <a href="lessons/Float/Float2.html" target="blank">Float2</a><br>
 
     </div>
 </body>
