--- a/index.html
+++ b/index.html
@@ -6,36 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework</title>
     <style>
-        div{ margin-left: 20px;}
-        hr{border: 1px dashed darkslategrey; width: 250px; margin: 10px 15px;}
+       div{ margin-left: 20px; color: rgba(128, 128, 128, 0.596); 
+            float: left;width: 25%; padding-bottom: 30px;}
+        hr{border: 1px dashed darkslategrey; width: 100%;}
         h4{color: darkslategrey;}
-
+        body{background-color: rgb(243, 220, 209);}
+        h2{color: darkslategrey; margin: 20px; margin-left: 20%; float: left;}
+        .header {float: none; width: 100%;}
+        .project {margin-left: -20px; margin-top: 50px;}
     </style>
 </head>
-<body style="background-color: rgb(243, 220, 209);">
-    <h2 style="color: darkslategrey; margin: 20px;">Homework</h2>  
-    <div>
-    <h4>Main</h4>
-    <a href="home/1/DIARY.html" target="_blank">DIARY</a><br>
-    <a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a><br>
-    <a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a><br>
-    <a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a><br>
-    <a href="home/4/Div_Frame.html" target="_blank">FRAME</a><br>
+<body>
+    <div class="header">
+    <h2>Homework</h2> 
+    <h2>Projects</h2>
+    </div> 
+    <hr>
+    <div><h4>Main</h4>
+    
+    <a href="home/1/DIARY.html" target="_blank">DIARY</a>--проверено<br>
+    <a href="home/1/VIZBOR.html" target="_blank">VIZBOR</a>--проверено<br>
+    <a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a>--проверено<br>
+    <a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a>--проверено<br>
+    <a href="home/4/Div_Frame.html" target="_blank">FRAME</a>--проверено<br>
     <a href="home/5/maket_table.html" target="_blank">TABLE</a><br>
+    <a href="home/5/maket_div.html" target="_blank">DIV</a><br>
+    <a href="home/6/chess.html" target="_blank">5.60 chess</a><br>
     </div>
-    <hr>
-    <div>    <h4>Add</h4>
-    <a href="home/1/valid.html" target="_blank">Valid</a><br>
-    <a href="home/1/oldtag.html" target="_blank">Oldtag</a><br>
-    <a href="home/2/webp.html" target="_blank">WebP</a><br>
-    <a href="home/2/skob.html" target="_blank">Skob</a><br>
-    <a href="home/3/font.html" target="_blank">Font</a><br>
-    <a href="home/3/safe.html" target="_blank">Safe</a><br>
-    <a href="home/3/task3.html" target="_blank">Task*</a><br>
-    <a href="home/4/1tag.html" target="_blank">1tag</a><br>
+    <div><h4>Add</h4>
+    <a href="home/1/valid.html" target="_blank">Valid</a>--проверено<br>
+    <a href="home/1/oldtag.html" target="_blank">Oldtag</a>--проверено<br>
+    <a href="home/2/webp.html" target="_blank">WebP</a>--проверено<br>
+    <a href="home/2/skob.html" target="_blank">Skob</a>--проверено<br>
+    <a href="home/3/font.html" target="_blank">Font</a>--проверено<br>
+    <a href="home/3/safe.html" target="_blank">Safe</a>--проверено<br>
+    <a href="home/3/task3.html" target="_blank">Tefal</a>--проверено<br>
+    <a href="home/4/1tag.html" target="_blank">1tag</a>--проверено<br>
     </div>
-    <hr>
-    <div><h4>Lessons</h4>
+    <div class="project">
+    <a href="projects/1/index.html" target="_blank">Project "FLOAT"</a><br>  
+    </div>
+ <hr>
+    <div class="lessons"><h4>Lessons</h4>
     <a href="lessons/Color/color.html" target="blank">Color</a><br>
     <a href="lessons/font/font1.html" target="blank">Font 1</a><br>
     <a href="lessons/font/font2.html" target="blank">Font 2</a><br>
