--- a/home/4/area.html
+++ b/home/4/area.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Floa
-         
-         t</title>
+    <title>AREA</title>
 </head>
 <body>
-    
+   <img src="img/4.jpg" alt=""; width="300px"> 
+   <map name=""></map>
 </body>
 </html>
