--- a/lessons/Float/index.html
+++ b/lessons/Float/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div style="height: 50px; background: rgb(160, 160, 197); text-align: center;">Header</div>
-   <div style="background: rgb(210, 210, 248);"> <div style="height: 550px; width: 200px; background: rgb(38, 63, 104);float: left; text-align: center;">Menu</div>
+   <div style="background: rgb(210, 210, 248);"> 
+    <div style="height: 550px; width: 200px; background: rgb(38, 63, 104);float: left; text-align: center;">Menu</div>
     <div style="height: 550px; width: 200px; background: rgb(16, 16, 44); float: right; text-align: center;">Banner</div>
     <div style="background: rgb(236, 236, 241);text-align: center; margin-left: 200px; margin-right: 200px;"> <h1 style="margin-top: 0em;">Content </h1> <br>
         </div>
