--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <a href="home/3/safe.html" target="_blank">Safe</a>--проверено<br>
     <a href="home/3/task3.html" target="_blank">Tefal</a>--проверено<br>
     <a href="home/4/1tag.html" target="_blank">1tag</a>--проверено<br>
+    <a href="home/4/area.html" target="_blank">Area</a><br>
     </div>
     <div class="project">
     <a href="projects/1/index.html" target="_blank">Project "FLOAT"</a><br>  
