--- a/home/4/area.html
+++ b/home/4/area.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AREA</title>
+    <style>
+        img{display: block;
+            margin: 0 auto;
+        border: 1px solid red;}
+        h3{text-align: center;}
+    </style>
 </head>
 <body>
-   <img src="img/4.jpg" alt=""; width="300px"> 
-   <map name=""></map>
+    <h3>Нажми на флаг, чтобы прочитать его историю</h3>
+   <img src="img/flags.jpg" alt="flags" usemap="#flags"> 
+   <map name="flags">
+       <area shape="rect" coords="1, 158, 459, 478" href="https://ru.wikipedia.org/wiki/%D0%91%D0%B5%D0%BB%D0%BE-%D0%BA%D1%80%D0%B0%D1%81%D0%BD%D0%BE-%D0%B1%D0%B5%D0%BB%D1%8B%D0%B9_%D1%84%D0%BB%D0%B0%D0%B3" alt="Жыве Беларусь">
+       <area shape="rect" coords="457, 156, 935, 478" href="https://ru.wikipedia.org/wiki/%D0%A4%D0%BB%D0%B0%D0%B3_%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D1%8B" alt="Слава Україні">
+   </map>
 </body>
 </html>
