--- a/projects/1/index.html
+++ b/projects/1/index.html
@@ -49,7 +49,7 @@
     </div>
   </div> 
   <div class="banner">
-      <div class="container">
+      <div class="container A">
         <h1>New ATOMIC collection with nano-techs</h1>
         <h3>Check our new 2021 collection for freeride </h3>
         <div class="button">Button</div>
