--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <a href="home/6/chess.html" target="_blank">5.60</a><br>
     <a href="home/5/maket_table.html" target="_blank">TABLE</a><br>
     <a href="home/5/maket_div.html" target="_blank">DIV</a><br>
+    <a href="home/6/linsk.html" target="_blank">Links</a><br>
     <a href="home/7/css-chess.html" target="_blank">Chess</a><br>
 
     </div>
