--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <a href="home/2/CHILDBOOK.html" target="_blank">BOOK</a>--проверено<br>
     <a href="home/3/FONT_GWF.html" target="_blank">FONT_GWF</a>--проверено<br>
     <a href="home/4/Div_Frame.html" target="_blank">FRAME</a>--проверено<br>
-    <a href="home/6/chess.html" target="_blank">5.60</a><br>
-    <a href="home/5/maket_table.html" target="_blank">TABLE</a><br>
+    <a href="home/6/chess.html" target="_blank">5.60</a>--проверено<br>
+    <a href="home/5/maket_table.html" target="_blank">TABLE</a>--проверено<br>
     <a href="home/5/maket_div.html" target="_blank">DIV</a><br>
-    <a href="home/6/linsk.html" target="_blank">Links</a><br>
-    <a href="home/7/css-chess.html" target="_blank">Chess</a><br>
+    <a href="home/6/linsk.html" target="_blank">Links</a>--проверено<br>
+    <a href="home/7/css-chess.html" target="_blank">Chess</a>--проверено<br>
 
     </div>
     <div><h4>Add</h4>
@@ -45,9 +45,9 @@
     <a href="home/3/safe.html" target="_blank">Safe</a>--проверено<br>
     <a href="home/3/task3.html" target="_blank">Tefal</a>--проверено<br>
     <a href="home/4/1tag.html" target="_blank">1tag</a>--проверено<br>
-    <a href="home/4/area.html" target="_blank">Area</a><br>
-    <a href="home/4/nocut.html" target="_blank">Nocut</a><br>
-    <a href="home/5/ball12.html" target="_blank">Ball12</a><br>
+    <a href="home/4/area.html" target="_blank">Area</a>--проверено<br>
+    <a href="home/4/nocut.html" target="_blank">Nocut</a>--проверено<br>
+    <a href="home/5/ball12.html" target="_blank">Ball12</a>--проверено<br>
 
     </div>
     <div class="project">
