--- a/home/5/maket_div.html
+++ b/home/5/maket_div.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div style="background: rgb(160, 160, 218); text-align: center; font-size: 20px; height: 30px; text-transform: uppercase; color: blue; padding: 10px;">Привет участникам соревнований</div>
-<div style="background-color: yellow;" >
-<div style="width: 140px; float: left; text-align: center; padding: 10px;">
+<Div style="background-color: yellow;">
+<div style="background-color: yellow; width: 140px; float: left; text-align: center; padding: 10px;" >
 <h3>Виды спорта</h3>
     <ul>
         <li><a href="" target="blank" title="Конькобежный спорт">Конькобежный спорт</a></li>
@@ -24,7 +24,7 @@
         <li><a href="" target="blank" title="Шашки">Шашки</a></li>
     </ul>
 </div>
-<div style="margin-left: 17%; background-color : white;">
+<div style="margin-left: 160px; background-color : white;">
 <div style="background: url(ball.gif) right repeat-y;">
           <h3 style="margin: 0px; padding-top: 20px; padding-left: 30px; text-align: center;">Об игре в футбол</h3>
             <img src="FB.webp" alt="Football" width="250px" style="float: left; margin: 20px;">
@@ -34,6 +34,7 @@
         </div>
     </div>
     </div>
+</Div>    
 <div style="background: rgb(160, 160, 218); text-align: center; font-size: 20px; height: 30px; text-transform: uppercase; color: blue; padding: 10px;">Главное не победа, а участие!</div>
 
   
